Project ecommerce_star_schema {
  database_type: "PostgreSQL"
}

/*
   DIMENSION: DATE
*/
Table dim_date {
  date_key int [pk]  // YYYYMMDD format
  full_date date
  day int
  month int
  year int
  quarter int
  day_of_week int
  day_name text
  is_weekend boolean
}

/*
   DIMENSION: PRODUCT
*/
Table dim_product {
  product_key int [pk]
  product_id text
  product_name text
  category text
  brand text

  start_date date
  end_date date
  is_current boolean
}

/*
   DIMENSION: CUSTOMER
*/
Table dim_customer {
  customer_key int [pk]
  customer_id text
  city text
  country text
  account_created_date date
  birth_date date
  status text
  customer_segment text

  start_date date
  end_date date
  is_current boolean
}

/*
   FACT TABLE: SALES
*/
Table fact_sales {
  fact_key int [pk]

  customer_key int
  product_key int
  date_key int

  order_id text

  quantity int
  unit_price decimal
  revenue decimal
}

/*
   RELATIONSHIPS
*/
Ref: fact_sales.customer_key > dim_customer.customer_key
Ref: fact_sales.product_key > dim_product.product_key
Ref: fact_sales.date_key > dim_date.date_key